// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Agent #process behavior errors in filters should propogate up to the caller of #process 1`] = `"whoops!"`;

exports[`Agent #process behavior should run filters in order 1`] = `
Object {
  "double": 2.2,
  "inc": 1.1,
}
`;

exports[`Utilities toProps with a reducer should handle an observable of >1 value 1`] = `
Array [
  Object {
    "loading": true,
  },
  Object {
    "data": 11,
    "loading": true,
  },
  Object {
    "data": 33,
    "loading": true,
  },
  Object {
    "data": 33,
    "error": null,
    "loading": false,
  },
]
`;

exports[`Utilities toProps with no reducer should handle a 1 value observable that errors 1`] = `
Array [
  Object {
    "loading": true,
  },
  Object {
    "data": null,
    "error": "foozle",
    "loading": false,
  },
]
`;

exports[`Utilities toProps with no reducer should handle a multi-value observable that errors 1`] = `
Array [
  Object {
    "loading": true,
  },
  Object {
    "data": 1,
    "loading": true,
  },
  Object {
    "data": null,
    "error": "foo",
    "loading": false,
  },
]
`;

exports[`Utilities toProps with no reducer should handle an observable of >1 value 1`] = `
Array [
  Object {
    "loading": true,
  },
  Object {
    "data": 1.1,
    "loading": true,
  },
  Object {
    "data": 2.2,
    "loading": true,
  },
  Object {
    "data": 2.2,
    "error": null,
    "loading": false,
  },
]
`;

exports[`Utilities toProps with no reducer should handle an observable of 1 value 1`] = `
Array [
  Object {
    "loading": true,
  },
  Object {
    "data": 1.1,
    "loading": true,
  },
  Object {
    "data": 1.1,
    "error": null,
    "loading": false,
  },
]
`;
